pinctrl: thead: add light pinctrl driver support
Add light pinctrl driver.

Signed-off-by: fugang.duan <duanfugang.dfg@linux.alibaba.com>

--- a/drivers/pinctrl/Kconfig
+++ b/drivers/pinctrl/Kconfig
@@ -400,6 +400,7 @@ source "drivers/pinctrl/zte/Kconfig"
 source "drivers/pinctrl/meson/Kconfig"
 source "drivers/pinctrl/cirrus/Kconfig"
 source "drivers/pinctrl/visconti/Kconfig"
+source "drivers/pinctrl/thead/Kconfig"
 
 config PINCTRL_XWAY
 	bool
