riscv: sourse cpufreq/cpuidle subsystem for low power
Let riscv arch also source cpufreq/cpuidle driver.

Signed-off-by: fugang.duan <duanfugang.dfg@alibaba-inc.com>
Signed-off-by: Shawn Wang <shawnwang@linux.alibaba.com>

--- a/arch/riscv/Kconfig
+++ b/arch/riscv/Kconfig
@@ -494,6 +494,8 @@ config BUILTIN_DTB
 
 menu "Power management options"
 
+source "drivers/cpuidle/Kconfig"
+source "drivers/cpufreq/Kconfig"
 source "kernel/power/Kconfig"
 
 endmenu
