cpuidle: thead: enable light cpuidle driver
Enable Thead light cpuidle driver.

Signed-off-by: fugang.duan <duanfugang.dfg@alibaba-inc.com>
Signed-off-by: Shawn Wang <shawnwang@linux.alibaba.com>

--- a/drivers/cpuidle/Makefile
+++ b/drivers/cpuidle/Makefile
@@ -34,3 +34,6 @@ obj-$(CONFIG_MIPS_CPS_CPUIDLE)		+= cpuidle-cps.o
 # POWERPC drivers
 obj-$(CONFIG_PSERIES_CPUIDLE)		+= cpuidle-pseries.o
 obj-$(CONFIG_POWERNV_CPUIDLE)		+= cpuidle-powernv.o
+###############################################################################
+# RISC-V drivers
+obj-$(CONFIG_LIGHT_CPUIDLE)          += cpuidle-light.o
