riscv: select CPU_PM when CPU_IDLE or SUSPEND enabled
Select CPU_PM when CPU_IDLE or SUSPEND enabled.

Signed-off-by: fugang.duan <duanfugang.dfg@alibaba-inc.com>
Signed-off-by: Shawn Wang <shawnwang@linux.alibaba.com>

--- a/arch/riscv/Kconfig
+++ b/arch/riscv/Kconfig
@@ -39,6 +39,7 @@ config RISCV
 	select CLONE_BACKWARDS
 	select CLINT_TIMER if !MMU
 	select COMMON_CLK
+	select CPU_PM if (SUSPEND || CPU_IDLE)
 	select EDAC_SUPPORT
 	select DMA_DIRECT_REMAP
 	select GENERIC_ALLOCATOR
