phy: synopsys: add dw mipi dphy support
Add Synopsys Designware MIPI DPHY driver support.

Signed-off-by: You Xiao <youxiao.fc@linux.alibaba.com>

--- a/drivers/phy/Makefile
+++ b/drivers/phy/Makefile
@@ -28,6 +28,7 @@ obj-y					+= allwinner/	\
 					   samsung/	\
 					   socionext/	\
 					   st/		\
+					   synopsys/	\
 					   tegra/	\
 					   ti/		\
 					   xilinx/
