--- a/drivers/watchdog/Kconfig
+++ b/drivers/watchdog/Kconfig
@@ -1019,6 +1019,22 @@ config VISCONTI_WATCHDOG
 	  Say Y here to include support for the watchdog timer in Toshiba
 	  Visconti SoCs.
 
+# RISCV Architecture
+
+config LIGHT_PMIC_WATCHDOG
+	tristate "THEAD Light pmic watchdog"
+	depends on THEAD_LIGHT_MBOX
+	select WATCHDOG_CORE
+	help
+	  This is the driver for the hardware watchdog on Light Board. This watchdog
+	  simply watches your kernel to make sure it doesn't freeze, and if
+	  it does, it reboots your computer after a certain amount of time.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called acquirewdt.
+
+	  Most people will say N.
+
 # X86 (i386 + ia64 + x86_64) Architecture
 
 config ACQUIRE_WDT
