--- a/sound/soc/thead/Makefile
+++ b/sound/soc/thead/Makefile
@@ -2,3 +2,4 @@
 
 obj-$(CONFIG_SND_SOC_THEAD_LIGHT) += light-i2s.o
 obj-$(CONFIG_SND_SOC_THEAD_LIGHT) += light-pcm-dma.o
+obj-$(CONFIG_SND_SOC_AW87519) += aw87519_audio.o
