net: ethernet: stmmac: add glue layer to support thead light
Add glue layer to support thead light.

Signed-off-by: fugang.duan <duanfugang.dfg@linux.alibaba.com>
Signed-off-by: Xianting Tian <xianting.tian@linux.alibaba.com>

--- a/drivers/net/ethernet/stmicro/stmmac/Kconfig
+++ b/drivers/net/ethernet/stmicro/stmmac/Kconfig
@@ -219,6 +219,17 @@ config DWMAC_INTEL_PLAT
 	  This selects the Intel platform specific glue layer support for
 	  the stmmac device driver. This driver is used for the Intel Keem Bay
 	  SoC.
+
+config DWMAC_LIGHT
+	tristate "Thead Light DWMAC support"
+	depends on OF && (SOC_THEAD || COMPILE_TEST)
+	help
+	  Support for ethernet controller on Thead SOCs.
+
+	  This selects Thead SoC glue layer support for the stmmac
+	  device driver. This driver is used for the Thead ice and light series
+	  SOCs GMAC ethernet controller.
+
 endif
 
 config DWMAC_INTEL
