clk: thead: add clock core and driver
Add new thead light core and clock driver.

Signed-off-by: wei.liu <lw312886@linux.alibaba.com>
Signed-off-by: fugang.duan <duanfugang.dfg@linux.alibaba.com>
Signed-off-by: Xianting Tian <xianting.tian@linux.alibaba.com>

--- a/drivers/clk/Kconfig
+++ b/drivers/clk/Kconfig
@@ -384,5 +384,6 @@ source "drivers/clk/ti/Kconfig"
 source "drivers/clk/uniphier/Kconfig"
 source "drivers/clk/x86/Kconfig"
 source "drivers/clk/zynqmp/Kconfig"
+source "drivers/clk/thead/Kconfig"
 
 endif
