riscv: Give out a menuconfig option to disable SWIOTLB
Some socs needn't SWIOTLB at all. For code size and mem footprint,
disable it at compile time.

Signed-off-by: Guo Ren <guoren@linux.alibaba.com>
Signed-off-by: Xianting Tian <xianting.tian@linux.alibaba.com>

--- a/arch/riscv/Kconfig
+++ b/arch/riscv/Kconfig
@@ -260,7 +260,7 @@ config ARCH_RV64I
 	select HAVE_FTRACE_MCOUNT_RECORD
 	select HAVE_FUNCTION_GRAPH_TRACER
 	select HAVE_FUNCTION_TRACER
-	select SWIOTLB if MMU
+	select SWIOTLB if RISCV_SWIOTLB
 
 endchoice
 
@@ -348,6 +348,11 @@ config RISCV_ISA_C
 	   Linux binary.
 
 	   If you don't know what to do here, say Y.
+
+config RISCV_SWIOTLB
+	bool "Enable SWIOTLB"
+	depends on MMU
+	default y
 
 menu "supported PMU type"
 	depends on PERF_EVENTS
