riscv: thead: Add -march=_xtheadc for compile
Add compile option for T-HEAD ISA.

Signed-off-by: Guo Ren <guoren@linux.alibaba.com>
Signed-off-by: Xianting Tian <xianting.tian@linux.alibaba.com>

--- a/arch/riscv/Kconfig
+++ b/arch/riscv/Kconfig
@@ -402,6 +402,10 @@ config VECTOR_0_7
 	  If you don't know what to do here, say Y.
 
 endchoice
+
+config THEAD_ISA
+	bool "T-HEAD extension ISA in AFLAGS with -march=_xtheadc"
+	default n
 endmenu
 
 menu "Kernel features"
