--- a/drivers/usb/dwc3/Kconfig
+++ b/drivers/usb/dwc3/Kconfig
@@ -139,4 +139,13 @@ config USB_DWC3_QCOM
 	  for peripheral mode support.
 	  Say 'Y' or 'M' if you have one such device.
 
+config USB_DWC3_THEAD
+	tristate "Thead Platform"
+	depends on OF && COMMON_CLK
+	default USB_DWC3
+	help
+	 Thead SoC use DesignWare Core IP for USB2/3
+	 functionality.
+	 Say 'Y' or 'M' if you have one such device.
+
 endif
