--- a/arch/riscv/boot/dts/thead/Makefile
+++ b/arch/riscv/boot/dts/thead/Makefile
@@ -1,3 +1,2 @@
 # SPDX-License-Identifier: GPL-2.0
-dtb-$(CONFIG_SOC_THEAD) += light-a-val.dtb
-dtb-$(CONFIG_SOC_THEAD) += light-a-val-dsi0.dtb light-a-val-hdmi.dtb light-a-val-dsi0-hdmi.dtb
+dtb-$(CONFIG_SOC_THEAD) += light-a-val.dtb light-a-val-hdmi.dtb light-a-val-dsi0.dtb light-a-val-dsi0-hdmi.dtb
