--- a/arch/riscv/boot/dts/thead/light-a-val.dts
+++ b/arch/riscv/boot/dts/thead/light-a-val.dts
@@ -549,6 +549,13 @@
                 compatible = "MicArray_0";
                 reg = <0x40>;
         };
+
+	audio_aw87519_pa@58 {
+		compatible = "awinic,aw87519_pa";
+		reg = <0x58>;
+		reset-gpio = <&ao_gpio4_porta 9 0x1>;
+		status = "okay";
+	};
 };
 
 &i2c1 {
