anolis: risc-v: dts: Enable hdmi audio codec, disable codec pa support
Signed-off-by: Xianting Tian <xianting.tian@linux.alibaba.com>

--- a/arch/riscv/boot/dts/thead/light-a-val-dsi0-hdmi.dts
+++ b/arch/riscv/boot/dts/thead/light-a-val-dsi0-hdmi.dts
@@ -27,3 +27,22 @@
 		};
 	};
 };
+
+&lightsound {
+	status = "okay";
+
+	simple-audio-card,dai-link@1 {          /* I2S - HDMI */
+		reg = <1>;
+		format = "i2s";
+		cpu {
+			sound-dai = <&light_i2s 1>;
+		};
+		codec {
+			sound-dai = <&dummy_codec 2>;
+		};
+	};
+};
+
+&light_i2s {
+        status = "okay";
+};
